ensure important extension info wraps so low vision users can see it at 200% zoom (#287591)
* fixes #287226

* undo change

--- a/src/vs/workbench/contrib/extensions/browser/media/extensionEditor.css
+++ b/src/vs/workbench/contrib/extensions/browser/media/extensionEditor.css
@@ -131,9 +131,8 @@
 
 .extension-editor > .header > .details > .subtitle {
 	padding-top: 6px;
-	white-space: nowrap;
-	height: 20px;
 	line-height: 20px;
+	flex-wrap: wrap;
 }
 
 .extension-editor > .header > .details > .subtitle .hide {
@@ -179,9 +178,6 @@
 
 .extension-editor > .header > .details > .description {
 	margin-top: 10px;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
 }
 
 .extension-editor > .header > .details > .actions-status-container {
